[workspace]
resolver = "2"
members = [
    "ch01-hello-world",
    "ch02-vars", 
    "ch03-functions",
    "ch04-control-flow",
    "ch05-ownership",
    "ch06-references",
    "ch07-slices",
    "ch08-structs",
    "ch09-enums",
    "ch10-guessing-game",
    "ch12-collections",
    "ch13-error-handling",
    "ch14-generics",
    "ch15-traits",
    "ch16-lifetimes",
    "ch17-testing",
    "ch18-functional",
    "ch19-smart-pointers",
    "ch20-minigrep",
    "ch21-concurrency",
    "ch22-shared-state",
    "ch23-oop",
    "ch24-patterns",
    "ch25-advanced",
    "ch26-macros",
    "ch27-ffi",
    "ch28-web-hello",
    "ch29-async",
    "ch30-web-server",
    "ch11-modules"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "Rust Learning Examples"

[workspace.dependencies]
# 共享依赖
ferris-says = "0.2"
